# nba-predictor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: nightly.yml  test.yml
nba_predictor/: __init__.py  api.py  backtest.py  config.py  display.py  fetcher.py  historical.py  history.py  ml_model.py  model.py  parser.py  scraper.py  ui.py
scripts/: run_backtest.py  smoke_test.py
tests/: test_api.py  test_backtest.py  test_fetcher.py  test_history.py  test_injuries.py  test_ml_model.py  test_model.py  test_series_score.py
