[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nba_predictor*"]

[project]
name = "nba-predictor"
version = "1.2.0"
description = "NBA playoff series predictor using live stats and machine learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100",
    "httpx>=0.24",
    "nba_api>=1.11.4",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.0",
    "streamlit>=1.57.0",
    "tabulate>=0.10.0",
    "uvicorn>=0.23",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.0"]

# ── pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

# ── ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long — long lines accepted where they aid readability
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811"]   # fixture redefinition is intentional in tests

# ── mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
